--- a/omniverse/Client/index.html
+++ b/omniverse/Client/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<body style="background-color:#000000;">
-	<object type="application/x-shockwave-flash" data="http://i.cdn.turner.com/toon/games/gamecreator/shell.swf" width="1000" height="700" id="game">
-		<param name="quality" value="high" />
-		<param name="bgcolor" value="#000000" />
-		<param name="play" value="true" />
-		<param name="wmode" value="window" />
-		<param name="allowScriptAccess" value="always" />
-    </object>
-</body>
-</html>
+<html>
+  <head>
+  <title>Ben 10 Omniverse: Game Creator</title>
+    </head>
+  <body>
+    <center>
+  <align="top"><h4><font face="Arial" color="#348ceb">WE HAVE A DISCORD SERVER, <a href="https://discord.gg/xVYHfrzWPx"/><font color="#348ceb">JOIN AND CHECK IT OUT!</font></a><br></br>
+    <body bgcolor="black"/>
+ 
+    <object type="application/x-shockwave-flash" data="shell.swf" width="1000" height="690">
+    <param name="movie" value="shell.swf"/>
+</object>
+      <br></br>
+     <h4><font face="Arial" color="green">GAME SUCCESSFULLY FOUND AND REBUILDED ON JULY 2021 BY NEONKNOME<br></br>ALL RIGHTS GOES TO TURNER AND YAMAGO</font></h4>
+    </center>
+    </body>
