--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
-<html>
-  <head>
-  <title>Ben 10 Ultimate Alien: Game Creator</title>
-    </head>
-  <body>
-    <center>
-  <align="top"><h4><font face="Arial" color="#348ceb">WE HAVE A DISCORD SERVER, <a href="https://discord.gg/xVYHfrzWPx"/><font color="#348ceb">JOIN AND CHECK IT OUT!</font></a><br></br>
-    <body bgcolor="black"/>
- 
-    <object type="application/x-shockwave-flash" data="shell.swf" width="1000" height="690">
-    <param name="movie" value="shell.swf"/>
-</object>
-      <br></br>
-     <h4><font face="Arial" color="green">GAME SUCCESSFULLY FOUND AND REBUILDED ON JULY 2021 BY NEONKNOME<br></br>ALL RIGHTS GOES TO TURNER AND YAMAGO</font></h4>
-    </center>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game Creator Central</title>
+</head>
+<body bgcolor="black">
+ <table width="100%" height="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+            <td align="center" valign="top" height="20%">
+                <p style="font-size: 20px; font-family: Helvetica, Arial, sans-serif;">Tekst na górze strony</p>
+            </td>
+        </tr>
+        <tr>
+            <td align="center" valign="middle">
+<center>
+    <div>
+        <h3><font face="Arial" color="green">CHOOSE YOUR GAME</font></h3>
+    </div>
+
+    <div>
+        <a href="ovgc.html"><img src="omniverse.png" alt="Ben 10 Omniverse Game Creator" style="max-width: 200px;"></a>
+        <a href="uagc.html"><img src="ultimatealien.png" alt="Ben 10 Ultimate Alien Game Creator" style="max-width: 200px;"></a>
+        <a href="afgc.html"><img src="alienforce.png" alt="Ben 10 Alien Force Game Creator" style="max-width: 200px;"></a>
+    </div>
+
+    <div>
+        <h3><font face="Arial" color="#348ceb"><a href="https://discord.gg/xVYHfrzWPx" style="color: #348ceb">JOIN US!</a></font></h3>
+    </div>
+</center>
+</body>
+</html>
