--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </div>
 
     <div>
-        <a href="ovgc.html"><img src="omniverse.png" alt="Ben 10 Omniverse Game Creator" style="max-width: 200px;"></a>
+        <a href="ovgcofln.au/ovgc.html"><img src="omniverse.png" alt="Ben 10 Omniverse Game Creator" style="max-width: 200px;"></a>
         <a href="uagc.html"><img src="ultimatealien.png" alt="Ben 10 Ultimate Alien Game Creator" style="max-width: 200px;"></a>
-        <a href="afgc.html"><img src="alienforce.png" alt="Ben 10 Alien Force Game Creator" style="max-width: 200px;"></a>
+        <a href="jp/afgc.html"><img src="alienforce.png" alt="Ben 10 Alien Force Game Creator" style="max-width: 200px;"></a>
     </div>
 
     <div>
